--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pixi.js": "^8.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
