--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "jspdf": "^2.5.1",
     "pixi.js": "^8.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
